# VolatilitySurfaces_Optiver

./: .gitignore  README.md  main.py  pyproject.toml  requirements.in  requirements.txt
config/: assets.json  settings.py
outputs/copulas/static/: joint_vine_spot_har_garch_evt.json  joint_vine_spot_nsde.json
outputs/dynamics/: gjr_garch_evt_params.csv  har_garch_evt_params.csv  ngarch_t_params.csv  nsde_uniforms.csv  test_uniforms_gjr_garch.csv  test_uniforms_har_garch_evt.csv  test_uniforms_ngarch_t.csv  train_uniforms_gjr_garch.csv  train_uniforms_har_garch_evt.csv  train_uniforms_ngarch_t.csv  uniforms_har_garch_evt.csv  uniforms_ngarch_t.csv
outputs/factors/: factors.csv
results/backtests/: p1_results_M0.csv  p1_results_M1.csv  p1_results_M2.csv  p1_results_M3.csv  p1_results_M4.csv
results/copulas/gas/: gas_vine_spot_har_garch_evt_summary.csv  gas_vine_spot_nsde_summary.csv
results/copulas/neural/: neural_vine_spot_har_garch_evt_summary.csv  neural_vine_spot_nsde_summary.csv
results/copulas/static/: joint_vine_spot_har_garch_evt_model.json  (+1 more)
src/backtesting/: p1_backtest.py  p1_sim.py  p2_sim.py  portfolio1.py
src/compression/: beta_multilevel_fanova.py
src/dependence/: Pytorch_gas_mixed_vine.py  explore_vine_truncation.py  gas_mixed_vine.py  neural_mixed_vine.py  simulated_data.py  static_mixed_vine.py
src/diagnostics/: time_series_diagnostics.py
src/dynamics/: GJR-GARCH-EVT.py  HAR-GARCH.py  HAR_GARCH.py  NGARCH-T.py  evt.py
src/fitting/: main.py  ssvi.py  surface_generation.py
src/preprocessing/: returns.ipynb
(+111 files in other folders)
