[project]
name = "optiver-seminar"
version = "0.1.0"
requires-python = ">=3.12.12,<3.13"
dependencies = [
    "arch>=8.0.0",
    "graphviz>=0.21",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "optuna>=4.7.0",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "polars>=1.38.1",
    "pyarrow>=23.0.0",
    "pyvinecopulib>=0.7.5",
    "scikit-fda>=0.10.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tensorly>=0.9.0",
    "torch>=2.10.0",
    "torchsde>=0.2.6",
    "torchvinecopulib>=1.1.2",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
